--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -26,7 +26,6 @@
   justify-content: center;
   align-items: center;
   flex-grow: 1;
-  color: #bbb;
 }
 
 .title a {
@@ -60,8 +59,7 @@
 .code {
   background: #fafafa;
   border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
+  padding: 0.5rem;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
 }
@@ -71,19 +69,27 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  max-width: 800px;
+  max-width: 1000px;
+}
+
+.textContent {
+  padding: 1.5rem;
+  text-align: left;
+  color: inherit;
+  max-width: 400px;
 }
 
 .card {
   margin: 1rem;
   padding: 1.5rem;
   text-align: left;
+  font-weight: bold;
   color: inherit;
   text-decoration: none;
   border: 1px solid #eaeaea;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 300px;
+  max-width: 400px;
 }
 
 .card:hover,
