:bug: (Jadual Solat API) Fix timezone prayer times

--- a/public/templates/jadual_solat.hbs
+++ b/public/templates/jadual_solat.hbs
@@ -51,7 +51,7 @@
     </tbody>
 </table>
 <footer>
-    <p class="text-center text-muted fs-6 fw-light">Dijana pada {{ generationDate }}</p>
+    <small class="text-center text-muted fs-6 fw-light">Dijana pada {{ generationDate }}</small>
 </footer>
 </body>
 </html>
