--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -85,8 +85,6 @@
 .link {
   position: relative;
   text-decoration: none;
-  color: darkblue;
-  font-weight: bold;
 }
 
 .link::after {
@@ -96,7 +94,7 @@
   left: 0;
   width: 0;
   height: 2px;
-  background-color: darkblue;
+  background-color: #6b7280;
   transition: width 0.3s ease;
 }
 
